# testproto

proto/: .gdbinit  CMakeLists.txt  build.sh
proto/proto_src/: CMakeLists.txt  test.pb.cc  test.pb.h  test.proto
proto/src/: testforproto.cc
