cmake_minimum_required(VERSION 3.5)
project(testforproto)
add_subdirectory(proto_src)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
if(DEBUG)
    set(CMAKE_CXX_FLAGS "-std=c++11 -g")
else()
    set(CMAKE_CXX_FLAGS "-std=c++11")
endif(DEBUG)
link_directories(/disk1/chenqihang/own_project/proto/lib)
add_executable(testforproto src/testforproto.cc)
target_link_libraries(testforproto libc++.so libprotobuf.so libprotoc.so libprotolib.so)
include_directories(/disk1/chenqihang/hqx/qnx_ap/3rdparty/AMSS/trunk/projects/projroot/usr/include)
include_directories(/disk1/chenqihang/own_project/proto/include)
include_directories(/disk1/chenqihang/own_project/proto/proto_src)
