cmake_minimum_required(VERSION 3.5)
project(testforproto)
add_subdirectory(proto_src)
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/out)
if(DEBUG)
    set(CMAKE_CXX_FLAGS "-std=c++11 -g")
else()
    set(CMAKE_CXX_FLAGS "-std=c++11")
endif(DEBUG)
link_directories(${PROJECT_SOURCE_DIR}/lib)
#add proto lib
link_directories(${PROJECT_SOURCE_DIR}/build/proto_src)
add_executable(testforproto src/testforproto.cc)
target_link_libraries(testforproto libc++.so libprotobuf.so libprotoc.so libprotolib.so)
include_directories(/disk1/chenqihang/hqx/qnx_ap/3rdparty/AMSS/trunk/projects/projroot/usr/include)
include_directories(/disk1/chenqihang/own_project/proto/include)
include_directories(/disk1/chenqihang/own_project/proto/proto_src)
