cmake_minimum_required(VERSION 3.5)
project(protolib)
aux_source_directory(. CPP_LIST)
link_directories(/disk1/chenqihang/own_project/proto/lib)
include_directories(/disk1/chenqihang/hqx/qnx_ap/3rdparty/AMSS/trunk/projects/projroot/usr/include)
add_library(protolib SHARED ${CPP_LIST})
target_link_libraries(protolib libc++.so libprotobuf.so libprotoc.so)
execute_process(COMMAND cp libprotolib.so /disk1/chenqihang/own_project/proto/lib WORKING_DIRECTORY /disk1/chenqihang/own_project/proto/build/proto_src)
